--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -216,4 +216,5 @@ es:
       default: "%A, %d de %B de %Y %H:%M:%S %z"
       long: "%A %d de %B de %Y %H:%M"
       short: "%d de %b %H:%M"
+      only_time: "%H:%M"
     pm: pm
